* Added on-the-fly gzip compression to Chirpy::UI::WebApp--webapp.enable_gzip=1
  in your configuration file enables it
* Added optional captcha image to Chirpy::UI::WebApp's quote submission page
* Added quote tagging
* Made search query Google-style and added tag: prefix for searching for quotes
  with a certain tag
* Made top and bottom quotes browsable
* Made ui.quotes_per_page apply to random, top and bottom quotes instead of
  individual setting per page type
* Made Atom 1.0 feed valid by adding feed ID and webmaster name. Webmaster name
  must be configured as webapp.webmaster_name
* Added quote_count method to Chirpy::DataManager and APPROVED_QUOTE_COUNT,
  UNAPPROVED_QUOTE_COUNT, and TOTAL_QUOTE_COUNT to templates
* Added mass quote approval and unflagging to Chirpy::UI::WebApp's
  administration section
* Changed Chirpy::DataManager's API so add_* methods return ID of added item
* Added option to automatically turn URLs and e-mail addresses in quotes into
  hyperlinks
* Made Chirpy::UI::WebApp escape all e-mail addresses to prevent spam
* Made Chirpy::UI::WebApp replace sequences of whitespaces with &#xA0; instead
  of &nbsp;, so the Atom feed remains valid
* Made quote reporting require session information to prevent false positives
  from crawlers
* Fixed sub account_count in Chirpy::DataManager::MySQL; removing accounts now
  works again
* Optimized fetching single quote in Chirpy::DataManager::MySQL
* Made Chirpy::UI::WebApp::Session automatically remove expired sessions every
  24 hours; util/remove_expired_sessions.pl is now obsolete, but you need to
  create a new database table, as described in install.txt
* Fixed US English (and Dutch) locale: quote_submission_thanks_administrator is
  now quote_submission_thanks_no_approval
* Extended feed templates with a couple of variables and added rating and
  report URLs as well as notes to the default templates
* Replaced feed templates' CSS with legacy HTML