@@ -178,6 +178,11 @@ account_removal_confirmation=Are you sure you would like to remove the selected 
 insufficient_administrative_privileges=You are not authorized to use this component because your administrative privileges are insufficient.
 no_tagged_quotes=There do not appear to be any quotes with tags.
 tag_link_description=View Quotes Tagged %1%
+update_available=Update Available
+update_available_text=Chirpy! version %1% was released on %2%.
+update_link_text=Click here for more information.
+update_check_failed=Update Check Failed
+update_check_failed_text=Chirpy! attempted to check for updates, but failed. The reported error was:
 webapp.start_page_description=Start Page
 webapp.start_page_short_title=Home
 webapp.next_page_title=Next Page
