@@ -178,6 +178,11 @@ account_removal_confirmation=Weet je zeker dat je de geselecteerde account wil v
 insufficient_administrative_privileges=Je hebt geen toegang tot dit onderdeel omdat je administratieprivileges niet voldoen.
 no_tagged_quotes=Er is zo te zien geen enkele quote met tags eraan.
 tag_link_description=Bekijk quotes met de tag %1%
+update_available=Update beschikbaar
+update_available_text=Chirpy! versie %1% werd vrijgegeven op %2%.
+update_link_text=Klik hier voor meer informatie.
+update_check_failed=Controleren op updates mislukt
+update_check_failed_text=Chirpy! probeerde te zoeken naar updates, maar dit mislukte. De gemelde fout was:
 webapp.start_page_description=Startpagina
 webapp.start_page_short_title=Home
 webapp.next_page_title=Volgende pagina
