@@ -219,4 +219,6 @@ sub _parse_time {
 	return 0;
 }
 
+1;
+
 ###############################################################################
